# innex1-rover

./: .dockerignore  .flake8  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROVER_CODING_STANDARD.md  UK Lunabotics CDR Electrical Team Updated.docx  frames_2026-01-06_20.52.44.gv  frames_2026-02-08_02.09.49.gv  pyproject.toml  pyrightconfig.json  runbook.md
firmware/teensy_motor_io/: CMakeLists.txt  README.md
firmware/teensy_motor_io/include/teensy_motor_io/: protocol.hpp  safety_state.hpp
firmware/teensy_motor_io/src/: protocol.cpp  safety_state.cpp
firmware/teensy_motor_io/tests/: test_protocol.cpp  test_safety_state.cpp
src/lunabot_bringup/: README.md  package.xml  setup.cfg  setup.py
src/lunabot_bringup/config/: arena_waypoints.yaml  crater_detection.rviz  ekf.yaml  hardware_fault_scenarios.yaml  oak_front_rgbd.yaml  oakd_front.yaml  ouster_lidar_debug.yaml  power_profiles.yaml  preflight_checks.yaml  preflight_checks_dry_run.yaml  preflight_checks_fault_injection.yaml  preflight_checks_hardware_localisation.yaml  preflight_checks_hardware_localisation_lidar_debug.yaml  preflight_checks_hardware_navigation.yaml  preflight_checks_hardware_navigation_lidar_debug.yaml  preflight_checks_lidar_debug.yaml  rosbag_evidence_profiles.yaml  runtime_profiles.yaml  twist_mux.yaml
src/lunabot_bringup/contracts/: interface_contracts.json
src/lunabot_bringup/launch/: depth_camera_debug.launch.py  foxglove_ground_control.launch.py  hardware_localisation.launch.py  hardware_navigation.launch.py  localisation.launch.py  mission_dry_run.launch.py  mission_manager.launch.py  mission_shuttle_evidence.launch.py  nav2_navigation.launch.py  navigation.launch.py  navigation_lio_debug.launch.py  oak_front_camera.launch.py  oakd_front_camera.launch.py  ouster_lidar_foxglove_debug.launch.py  ouster_room_debug.launch.py  rover_diagnostics.launch.py  simulation.launch.py
src/lunabot_bringup/lunabot_bringup/: hardware_fault_injection.py  launch_gate.py  localisation_readiness.py  message_fields.py  mission_dry_run.py  mission_evidence.py  mission_manager.py  mission_timer.py  movement_watchdog.py  navigate_to_pose_gate.py  oakd_camera_contract.py  power_telemetry.py  preflight_check.py  preflight_profiles.py  rover_diagnostics.py  runtime_profile.py
src/lunabot_bringup/rviz/: depth_camera_debug.rviz  navigation.rviz  ouster_room_debug.rviz
src/lunabot_bringup/test/: navigate_to_pose_test_server.py  test_depth_camera_debug_launch.py  test_foxglove_ground_control_launch.py  test_foxglove_layout.py  test_hardware_fault_injection.py  test_launch_gate.py  test_localisation_readiness.py  test_message_fields.py  test_mission_dry_run.py  test_mission_evidence.py  test_mission_manager.py  test_mission_manager_launch.py  test_mission_shuttle_evidence_launch.py  test_mission_timer.py  test_movement_watchdog.py  test_navigate_to_pose_gate.py  test_navigate_to_pose_gate_launch.py  test_navigate_to_pose_gate_rejection_launch.py  test_navigation_launch.py  test_oak_front_camera_launch.py  test_oakd_camera_contract.py  test_oakd_front_camera_launch.py  test_ouster_lidar_foxglove_debug_launch.py  test_power_telemetry.py  test_preflight_profiles.py  test_rover_diagnostics.py  test_rover_diagnostics_launch.py  test_runtime_profile.py
src/lunabot_excavation/: README.md  package.xml  setup.cfg  setup.py
src/lunabot_excavation/launch/: excavation_action_server.launch.py  excavation_bench.launch.py  excavation_controller.launch.py  excavation_sim.launch.py
src/lunabot_excavation/lunabot_excavation/: __init__.py  excavation_action_server.py  excavation_bench.py  excavation_controller.py  excavation_sim_proxy.py  excavation_telemetry_mock.py
src/lunabot_excavation/resource/: lunabot_excavation
src/lunabot_excavation/test/: test_copyright.py  test_excavation_action_server_behaviour.py  test_excavation_bench_behaviour.py  test_excavation_controller_behaviour.py  test_excavation_sim_proxy_behaviour.py  test_excavation_telemetry_mock_behaviour.py  test_flake8.py  test_pep257.py
src/lunabot_interfaces/: CMakeLists.txt  README.md  package.xml
src/lunabot_interfaces/action/: Deposit.action  Excavate.action
src/lunabot_interfaces/msg/: DrivetrainCommand.msg  DrivetrainStatus.msg  DrivetrainTelemetry.msg  ExcavationCommand.msg  ExcavationStatus.msg  ExcavationTelemetry.msg  LocalisationStartZoneStatus.msg  PowerTelemetry.msg
src/lunabot_interfaces/srv/: ExcavationJog.srv  GetReadiness.srv
src/lunabot_localisation_cpp/: CMakeLists.txt  README.md  package.xml
src/lunabot_localisation_cpp/include/lunabot_localisation_cpp/: legal_lidar_filter_core.hpp  legal_lidar_filter_node.hpp
src/lunabot_localisation_cpp/src/: legal_lidar_filter_core.cpp  legal_lidar_filter_node.cpp
src/lunabot_localisation_cpp/test/: test_legal_lidar_filter_core.cpp
src/lunabot_simulation/: .flake8  CMakeLists.txt  GAZEBO_CLASSIC_REFERENCE.md  README.md  package.xml
src/lunabot_simulation/launch/: moon_yard.launch.py  test_world.launch.py
src/lunabot_simulation/models/apriltag_beacon/: model.config  model.sdf
src/lunabot_simulation/models/crater/: model.config  model.sdf
src/lunabot_simulation/models/crater_terrain/: model.config  model.sdf
src/lunabot_simulation/models/crater_terrain/meshes/: crater_terrain.mtl
src/lunabot_simulation/models/lunar_surface/: model.config  model.sdf
src/lunabot_simulation/models/lunar_surface_flat/: model.config  model.sdf
src/lunabot_simulation/models/rock_large/: model.config  model.sdf
src/lunabot_simulation/models/rock_rough/: model.config  model.sdf
src/lunabot_simulation/models/rock_round/: model.config  model.sdf
src/lunabot_simulation/models/rock_small/: model.config  model.sdf
src/lunabot_simulation/scripts/: check_motion_response.py  check_sim_topics.py  sim_clock_relay.py  smoke_test_classic.sh
src/lunabot_simulation/test/: test_mission_acceptance.py
src/lunabot_simulation/worlds/: moon_yard.sdf  moon_yard_craters.sdf  moon_yard_flat.sdf  moon_yard_regression.sdf  test_world.sdf
(+276 files in other folders)
