<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_bringup</name>
  <version>0.1.0</version>
  <description>System level launch files and robot bringup</description>
  <maintainer email="lunabotics@le.ac.uk">Leicester Lunabotics Team</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>lunabot_navigation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
